# AcornOS

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  kconfig
docs/: EROFS_MIGRATION.md
profile/: init_tiny.template
profile/etc/: login.defs
profile/etc/init.d/: mdev
profile/live-overlay/etc/: hostname  issue  motd
profile/live-overlay/etc/profile.d/: 00-acorn-test.sh
src/: cache.rs  config.rs  extract.rs  keys.rs  lib.rs  main.rs  qemu.rs  rebuild.rs  timing.rs
src/artifact/: initramfs.rs  iso.rs  mod.rs  rootfs.rs  squashfs.rs  uki.rs
src/component/: builder.rs  context.rs  definitions.rs  executor.rs  mod.rs
src/component/custom/: branding.rs  busybox.rs  filesystem.rs  firmware.rs  live.rs  mod.rs  modules.rs  ssh.rs
src/preflight/: disk_space.rs  host_tools.rs  mod.rs  network.rs
src/recipe/: alpine.rs  linux.rs  mod.rs
