[package]
name = "acornos"
version = "0.1.0"
edition = "2021"
description = "AcornOS ISO builder - Alpine Linux + OpenRC + musl + busybox"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LevitateOS/AcornOS"
keywords = ["linux", "alpine", "openrc", "musl", "iso"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
distro-spec = { path = "../distro-spec" }
distro-builder = { path = "../distro-builder" }
recinit = { path = "../tools/recinit" }
recuki = { path = "../tools/recuki" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }

[dev-dependencies]
tempfile = "3"
